--- a/pwa-planteau-api/api/package.json
+++ b/pwa-planteau-api/api/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.0",
     "@types/pg": "^8.15.5",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
