--- a/pwa-planteau-api/client/Dockerfile
+++ b/pwa-planteau-api/client/Dockerfile
@@ -1,6 +1,21 @@
-FROM node:18-alpine AS build
+FROM node:24-alpine AS build
+
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci
+
+COPY package.json ./
+
+RUN npm install
+
 COPY . .
-RUN npm run build 
+
+RUN npm run build
+
+FROM nginx:alpine
+
+RUN rm -rf /usr/share/nginx/html/
+
+COPY --from=build /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
