--- a/pwa-planteau-api/client/package.json
+++ b/pwa-planteau-api/client/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\"",
     "quality": "npm run lint && npm run format:check",
-    "quality:fix": "npm run lint:fix && npm run format"
+    "quality:fix": "npm run lint:fix && npm run format",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
