--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@commitlint/config-conventional": "^20.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3"
+  },
+  "dependencies": {
+    "react-masonry-css": "^1.0.16"
   }
 }
