--- a/pwa-planteau-api/client/package.json
+++ b/pwa-planteau-api/client/package.json
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@playwright/test": "^1.56.1",
     "@types/axios": "^0.9.36",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
