--- a/pwa-planteau-api/api/package.json
+++ b/pwa-planteau-api/api/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -38,6 +39,7 @@
     "eslint-config-prettier": "^10.1.8",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.45.0"
