feat(api): Mise en place de prisma

--- a/pwa-planteau-api/api/.env.example
+++ b/pwa-planteau-api/api/.env.example
@@ -1,10 +1,22 @@
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
-DB_PORT=
-JWT_ACCESS_SECRET=
-JWT_REFRESH_SECRET=
-API_PORT=
-FRONT_URL=
-API_BASE_PATH=
+# Exemple d'environnement pour le backend API Planteau
+# Copiez ce fichier en .env et adaptez les valeurs à votre environnement local
+
+# Port de l'API
+API_PORT=3000
+
+# Configuration PostgreSQL
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=planteau_user
+DB_PASSWORD=planteau_password
+DB_NAME=planteau_db
+
+# URL complète pour Prisma (optionnel, générée automatiquement si non précisée)
+# DATABASE_URL=postgresql://planteau_user:planteau_password@localhost:5432/planteau_db
+
+# Secrets JWT (à personnaliser en prod)
+JWT_ACCESS_SECRET=your_access_secret
+JWT_REFRESH_SECRET=your_refresh_secret
+
+# URL du frontend autorisée par CORS
+FRONT_URL=http://localhost:5173/
