--- a/pwa-planteau-api/api/package.json
+++ b/pwa-planteau-api/api/package.json
@@ -20,12 +20,19 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "lint-staged": {
+    "**/*.ts": [
+      "npm run lint:fix",
+      "npm run format"
+    ]
+  },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "^7.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "pg": "^8.16.3",
+    "@prisma/adapter-pg": "^7.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -39,7 +46,7 @@
     "eslint-config-prettier": "^10.1.8",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
-    "prisma": "^6.19.0",
+    "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.45.0"
