--- a/pwa-planteau-api/api/package.json
+++ b/pwa-planteau-api/api/package.json
@@ -43,13 +43,16 @@
     "@types/node": "^24.5.0",
     "@types/pg": "^8.15.5",
     "@types/winston": "^2.4.4",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.45.0"
+    "typescript-eslint": "^8.45.0",
+    "vitest": "^4.0.18"
   }
 }
