--- a/pwa-planteau-api/api/package.json
+++ b/pwa-planteau-api/api/package.json
@@ -47,6 +47,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.0",
     "@types/pg": "^8.15.5",
+    "@types/supertest": "^6.0.3",
     "@types/winston": "^2.4.4",
     "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.36.0",
@@ -54,6 +55,7 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^7.2.0",
+    "supertest": "^7.2.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.2",
