--- a/pwa-planteau-api/api/package.json
+++ b/pwa-planteau-api/api/package.json
@@ -17,8 +17,8 @@
     "create-fixtures": "tsx src/db/createFixtures.ts",
     "type-check": "tsc --noEmit",
     "test": "vitest run",
-    "test:unit": "vitest run tests/unit --testPathPattern=unit",
-    "test:integration": "vitest run tests/integration --testPathPattern=integration",
+    "test:unit": "vitest run tests/unit",
+    "test:integration": "vitest run tests/integration",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest"
   },
