--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
         run: npm run type-check || true
       - name: Build application
         run: npm run build || echo "No build step needed"
+      - name: Generate Prisma Client
+        run: npx prisma generate
       - name: Run unit tests
         run: npm run test:unit
       - name: Run integration tests
