--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,8 @@ jobs:
         run: npx prisma generate
       - name: Run database migrations
         run: npx prisma migrate deploy
+      - name: Create test fixtures
+        run: npm run create-fixtures
       - name: Run unit tests
         run: npm run test:unit
       - name: Run integration tests
