--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,8 +71,10 @@ jobs:
         run: npm ci
       - name: Rebuild native modules
         run: npm rebuild
+      - name: Clean Prisma generated files
+        run: rm -rf src/generated/prisma
       - name: Generate Prisma Client
-        run: npx prisma generate --force
+        run: npx prisma generate
       - name: Security audit
         run: npm audit --audit-level=high
       - name: Run linter
