--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,14 @@ jobs:
           cache-dependency-path: ./pwa-planteau-api/api/package-lock.json
       - name: Install dependencies
         run: npm ci
+      - name: Setup PostgreSQL binaries for Prisma
+        run: npm ls @prisma/adapter-pg || npm install --save-dev @prisma/adapter-pg@latest
       - name: Generate Prisma Client
         run: npx prisma generate
       - name: Run database migrations
         run: npx prisma migrate deploy
+      - name: Create test fixtures
+        run: npm run create-fixtures
       - name: Security audit
         run: npm audit --audit-level=high
       - name: Run linter
