feat: add .env.test and configure prisma for test environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
         working-directory: ./pwa-planteau-api/api
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5433/planteau_db
+      NODE_ENV: test
     services:
       postgres:
         image: postgres:latest
