feat: replace frontend mocks with real API integration

--- a/pwa-planteau-api/api/.env.example
+++ b/pwa-planteau-api/api/.env.example
@@ -4,6 +4,9 @@
 # Port de l'API
 API_PORT=3000
 
+# Chemin de base pour les routes API
+API_BASE_PATH=/api
+
 # Configuration PostgreSQL
 DB_HOST=localhost
 DB_PORT=5432
@@ -20,3 +23,6 @@ JWT_REFRESH_SECRET=your_refresh_secret
 
 # URL du frontend autorisée par CORS
 FRONT_URL=http://localhost:5173/
+
+# Niveau de log: error, warn, info, http, debug, silly
+LOG_LEVEL=http
