--- a/pwa-planteau-api/api/.env.example
+++ b/pwa-planteau-api/api/.env.example
@@ -1,6 +1,9 @@
 # Exemple d'environnement pour le backend API Planteau
 # Copiez ce fichier en .env et adaptez les valeurs à votre environnement local
 
+# Environnement (development, production)
+NODE_ENV=development
+
 # Port de l'API
 API_PORT=3000
 
@@ -17,12 +20,16 @@ DB_NAME=planteau_db
 # URL complète pour Prisma (optionnel, générée automatiquement si non précisée)
 # DATABASE_URL=postgresql://planteau_user:planteau_password@localhost:5432/planteau_db
 
-# Secrets JWT (à personnaliser en prod)
-JWT_ACCESS_SECRET=your_access_secret
-JWT_REFRESH_SECRET=your_refresh_secret
+# Secrets JWT (à personnaliser en prod avec des valeurs aléatoires fortes)
+JWT_ACCESS_SECRET=dev_secret_access_key_change_in_production
+JWT_REFRESH_SECRET=dev_secret_refresh_key_change_in_production
+
+# Durées d'expiration des tokens JWT
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
 
 # URL du frontend autorisée par CORS
-FRONT_URL=http://localhost:5173/
+FRONT_URL=http://localhost:5173
 
 # Niveau de log: error, warn, info, http, debug, silly
 LOG_LEVEL=http
