fix(dockerfile): fix version prisma dans api

--- a/pwa-planteau-api/api/Dockerfile
+++ b/pwa-planteau-api/api/Dockerfile
@@ -4,7 +4,7 @@ FROM node:24-alpine
 # Étape 2: Créer et définir le répertoire de travail dans le conteneur
 WORKDIR /app
 
-RUN npm install -g prisma
+RUN npm install -g prisma@7.3.0
 
 # Étape 3: Copier les fichiers package.json et package-lock.json (ou yarn.lock) dans le conteneur
 COPY package*.json ./
